--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid </title>
+    <title>promedio</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <section>
                 <h2>Tabla de calculos</h2>
                 <br>
-                <table class="mode" border="1">
+                <table id="tabla" class="mode" border="1">
                     <thead>
                         <tr>
                             <th colspan="2">ID</th>
@@ -25,61 +25,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>
-                                <button>
-                                    <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" width="18">
-                                </button>
-                            </td>
-                            <td>
-                                <button>
-                                    <img src="https://png.pngtree.com/png-vector/20190121/ourmid/pngtree-vector-garbage-icon-png-image_332912.jpg" width="17">
-                                </button>
-                            </td>
-                            <td>.</td>
-                            <td>.</td>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <button>
-                                    <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" width="18">
-                                </button>
-                            </td>
-                            <td>
-                                <button>
-                                    <img src="https://png.pngtree.com/png-vector/20190121/ourmid/pngtree-vector-garbage-icon-png-image_332912.jpg" width="17">
-                                </button>
-                            </td>
-                            <td>.</td>
-                            <td>.</td>  
-                    <tbody>
-                        <tr>
-                            <td>
-                                <button>
-                                    <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" width="18">
-                                </button>
-                            </td>
-                            <td>
-                                <button>
-                                    <img src="https://png.pngtree.com/png-vector/20190121/ourmid/pngtree-vector-garbage-icon-png-image_332912.jpg" width="17">
-                                </button>
-                            </td>
-                            <td>.</td>
-                            <td>.</td> 
-                    <tbody>
-                        <tr>
-                            <td>
-                                <button>
-                                    <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" width="18">
-                                </button>
-                            </td>
-                            <td>
-                                <button>
-                                    <img src="https://png.pngtree.com/png-vector/20190121/ourmid/pngtree-vector-garbage-icon-png-image_332912.jpg" width="17">
-                                </button>
-                            </td>
-                            <td>.</td>
-                            <td>.</td>           
+                        
+                    </tbody>       
                 </table>
 
                 <br>
@@ -87,14 +34,15 @@
                 <br>
                 <article class="articleform">
 
-                    <form action="/guardar" method="post">
+                    <form id="formulario" action="/guardar" method="post">
                         <label for="actividad">Actividad:</label>
                         <input type="text" id="actividad" name="actividad" required>
                         <br><br>
+
                         <label for="nota">Nota:</label>
                         <input type="number" id="nota" name="nota" step="0.1" min="0" max="10" required>
                         <br><br>
-                        <button type="submit">Guardar</button>
+                        <button type="button" onclick="guardar()">Guardar</button>
                     </form>
                 </article>
         </section>
@@ -104,6 +52,7 @@
         <footer>
             <p>........2024..........</p>
         </footer>
+        <script src="index.js"></script>
     </main>
 </body>
 </html>
